# ENEL400

./: SquareLine_Project.sll  SquareLine_Project.spj  platformio.ini
DisplayFirmware/: .gitignore  CMakeLists.txt  DevelopmentREADME.md  README.md  huge_app_dev.csv  partitions.csv
DisplayFirmware/PythonRLE_Script/: batteryData.txt  batteryData_rle.h  bikeData.txt  bikeicon_rle.h  rle.py  thermData.txt  thermData_rle.h  warningData.txt  warningData_rle.h
DisplayFirmware/assets/: BatteryPic.html
DisplayFirmware/include/: HeaderManager.hpp  SensorData.hpp  SystemStatus.hpp  TimeManager.hpp  buttonTask.hpp  displayTask.hpp  logging.hpp  main.hpp  pins.hpp  screenEnums.hpp  screenManager.hpp  sd_log.hpp  spotify_api.h  taskSync.hpp  timeTask.hpp  uart.hpp  wifiTask.hpp
DisplayFirmware/main/: CMakeLists.txt  HeaderManager.cpp  ScreenManager.cpp  SensorData.cpp  SystemStatus.cpp  TimeManager.cpp  buttonTask.cpp  displayTask.cpp  idf_component.yml  main.cpp  sd_log.cpp  spotify_api.cpp  timeTask.cpp  uart.cpp  wifiTask.cpp
DisplayFirmware/main/Screens/: HealthMetricsScreen.cpp  PlotScreen.cpp  PowerScreen.cpp  ResistanceScreen.cpp  SettingsScreen.cpp  SpotifyScreen.cpp  TemperatureWarningScreen.cpp
DisplayFirmware/main/UI/: images.c  timerHeader.cpp  ui.c  ui_Screen1.c  ui_Screen2.c  ui_Screen2.cpp  ui_Screen3.cpp  ui_Screen4.c  ui_Screen5.c  ui_SpotifyScreen.c  ui_helpers.c  ui_img_batterypic_png.c  ui_img_bikeicon_png.c
GanttChart_Py/: ganttChart.py
PowerArduinoFirmware/: HallEffectSensorExample.cpp  global_variables.ino  main.ino  measure.ino  sendingPowerExample.ino  system_states.ino
PowerArduinoFirmware/main/: ISR.ino  LED_strip.ino  OLED.ino  UART.ino  charge_states.ino  defines.ino  dependencies.ino  main.ino  measure.ino  system_states.ino  timer.ino  (+2 more)
ReCycle_App/: app.json  package-lock.json  package.json
UI_Assets/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_Screen1.c  ui_Screen2.c  ui_Screen3.c  ui_Screen4.c  ui_Screen5.c  ui_img_1796809118.c  ui_img_701068026.c  ui_img_batterypic_png.c  ui_img_bikeicon_png.c  ui_img_warningneonpng_png.c
include/: User_Setup_Reference.h  lv_conf.h  pins.hpp  sd_log.hpp  uart.hpp  ui.h
src/: main.cpp  marcusExample.cpp  sd_log.cpp  tftExample.cpp  uart.cpp  ui.c
(+158 files in other folders)
